<resources>
    <string name="app_name">All Document Reader</string>
    <string name="document_reader_for_all">Document reader for all</string>
    <string name="all_file">All File</string>
    <string name="pdf_file">PDF File</string>
    <string name="word_file">Word File</string>
    <string name="power_point">Power Point</string>
    <string name="excel_file">Excel File</string>
    <string name="text_file">Text File</string>
    <string name="my_file">My File</string>
    <string name="recent">Recent</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="all_document">All Document</string>
    <string name="rename">Rename</string>
    <string name="go_page">Go page</string>
    <string name="screen">Screen</string>
    <string name="print">Print</string>
    <string name="file_search">File search</string>

</resources>